--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - run:
           name: Unit tests
           env: RUST_BACKTRACE=1
-          command: cargo unit-test --locked --offline
+          command: cargo unit-test --offline
       - run:
           name: Integration tests
           command: cargo integration-test --locked
