--- a/.github/workflows/Basic.yml
+++ b/.github/workflows/Basic.yml
@@ -5,7 +5,6 @@ on: [push, pull_request]
 name: Basic
 
 jobs:
-
   test:
     name: Test Suite
     runs-on: ubuntu-latest
@@ -25,7 +24,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: unit-test
-          args: --locked
+          args: --offline
         env:
           RUST_BACKTRACE: 1
 
@@ -33,7 +32,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: wasm
-          args: --locked
+          args: --offline
         env:
           RUSTFLAGS: "-C link-arg=-s"
 
@@ -41,8 +40,7 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: integration-test
-          args: --locked
-
+          args: --offline
 
   lints:
     name: Lints
@@ -78,4 +76,4 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: schema
-          args: --locked
+          args: --offline
