--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "secret-template"
+name = "scrtsibyl-contract"
 version = "0.1.0"
 authors = ["Matteo Mortelliti <matteo@balloonbox.io>"]
 edition = "2018"
@@ -44,6 +44,9 @@ secp256k1 = {package = "secp256k1", version = "0.21.2", features = ["rand-std", 
 sha2 = {package = "sha2", version = "0.9.1", default-features = false}
 ripemd160 = {package="ripemd160", version = "0.9.1"}
 bincode2 = "2.0.1"
+subtle = { version = "2.2.3", default-features = false }
+base64 = "0.12.3"
 
 [dev-dependencies]
 cosmwasm-schema = "0.10.1"
+
